Fix whitespace on file view

--- a/styles/screen-file.scss
+++ b/styles/screen-file.scss
@@ -42,3 +42,7 @@
     letter-spacing: 0.8px;
     padding-left: 2px;
 }
+
+.file-body {
+    padding: 24px 16px;
+}
